--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/p5": "^1.4.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "less": "^4.1.3",
+    "p5": "^1.5.0",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
